added panic popup for error reporting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.11.3"
 global-hotkey = "0.5.1"
 image = "0.25.1"
 log = "0.4.21"
+native-dialog = "0.7.0"
 pollster = "0.3.0"
 rayon = "1.10.0"
 serde = "1.0.197"
