--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bytemuck = "1.15.0"
+bytemuck =  {version = "1.15.0", features = ["derive"]}
 cfg-if = "1.0.0"
 cgmath = "0.18.0"
 chrono = "0.4.37"
