Added rects + rect mask + border radius

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ image = "0.25.1"
 log = "0.4.21"
 native-dialog = "0.7.0"
 pollster = "0.3.0"
+rand = "0.8.5"
 rayon = "1.10.0"
 serde = "1.0.197"
 serde_yaml = "0.9.34"
