--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cgmath = "0.18.0"
 chrono = "0.4.37"
 dirs = "5.0.1"
 env_logger = "0.11.3"
+fontdue = "0.8.0"
 global-hotkey = "0.5.1"
 image = "0.25.1"
 log = "0.4.21"
@@ -20,6 +21,7 @@ rayon = "1.10.0"
 serde = "1.0.197"
 serde_yaml = "0.9.34"
 tokio = {version = "1.37.0", features = ["full"]}
+ttf-parser = "0.20.0"
 wgpu = "0.18"
 winit = {version = "0.28"}
 
